--- a/main.html
+++ b/main.html
@@ -7,6 +7,19 @@
 </head>
 
 <body>
+<nav>
+	<ul>
+		<li><a href="https://google.com">Home</a></li>
+		<li><a href="https://google.com">About us</a></li>
+		<li><a href="https://google.com">Contact us</a></li>
+	</ul>
+</nav>
+	<heading>
+		<video controls height="300px"><source  src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"></video>
+		<video controls height="300px"><source  src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4"></video>
+		<video controls height="300px"><source  src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4"></video>
+			</heading>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
