--- a/main.html
+++ b/main.html
@@ -14,11 +14,9 @@
 		<li><a href="https://google.com">Contact us</a></li>
 	</ul>
 </nav>
-	<h2>Video first</h2>
+	<h2>3 random videos</h2>
 		<video controls height="300px"><source  src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"></video>
-		<h2>Video Second</h2>
 		<video controls height="300px"><source  src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4"></video>
-		<h2>Video Third</h2>
 		<video controls height="300px"><source  src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4"></video>
 
 	
